Altofocus: Fix issues with widget block centre alignments.

--- a/altofocus/assets/stylesheets/blocks.css
+++ b/altofocus/assets/stylesheets/blocks.css
@@ -278,11 +278,14 @@ hr.wp-block-separator {
 5.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
-/* Archives, Categories & Latest Posts */
+/* General Widget styles */
 
 .wp-block-archives.aligncenter,
 .wp-block-categories.aligncenter,
-.wp-block-latest-posts.aligncenter {
+.wp-block-categories.aligncenter ul,
+.wp-block-latest-posts.aligncenter,
+.wp-block-latest-comments.aligncenter {
+	list-style-position: inside;
 	text-align: center;
 }
 
