--- a/altofocus/assets/stylesheets/editor-blocks.css
+++ b/altofocus/assets/stylesheets/editor-blocks.css
@@ -563,10 +563,20 @@ p.has-drop-cap:not(:focus)::first-letter {
 	list-style: disc;
 }
 
+.edit-post-visual-editor [data-align="center"] .wp-block-categories__list,
+.edit-post-visual-editor [data-align="center"] .wp-block-archives,
+.edit-post-visual-editor [data-align="center"] .wp-block-lastest-posts {
+	list-style-position: inside;
+}
+
 .editor-styles-wrapper .wp-block-archives li,
 .editor-styles-wrapper .wp-block-categories li,
 .editor-styles-wrapper .wp-block-latest-posts li {
 	margin-bottom: 0;
+}
+
+.editor-styles-wrapper .wp-block-latest-posts.is-grid {
+	list-style: none;
 }
 
 /*--------------------------------------------------------------
